SUBDIRS = soap

lib_LTLIBRARIES = libwhoson.la
libwhoson_la_SOURCES = \
  whoson.cpp account.hpp account.cpp network.hpp network.cpp \
  soap/WhosOnLogonEventServiceSoap12Proxy.cpp \
  soap/WhosOnLogonEventServiceSoap12Proxy.h \
  soap/WhosOnLogonEventServiceSoapProxy.cpp \
  soap/WhosOnLogonEventServiceSoapProxy.h \
  soap/WhosOnC.cpp \
  soap/WhosOnH.h \
  soap/WhosOnStub.h
include_HEADERS = whoson.hpp
