SUBDIRS = soap

lib_LTLIBRARIES = libwhoson.la
libwhoson_la_SOURCES = \
  whoson.cpp account.hpp account.cpp network.hpp network.cpp \
  mac.c \
  soap/WhosOnLogonAccountingServiceSoap12Proxy.cpp \
  soap/WhosOnLogonAccountingServiceSoap12Proxy.h \
  soap/WhosOnLogonAccountingServiceSoapProxy.cpp \
  soap/WhosOnLogonAccountingServiceSoapProxy.h \
  soap/WhosOnC.cpp \
  soap/WhosOnH.h \
  soap/WhosOnStub.h
include_HEADERS = whoson.hpp
